--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
       </div>
           <div class="row">
-            <p>Copyright &copy; 2020 by Omnifood. All rights reserved.</p>
+            <p>Copyright &copy; Sanjeev Ray. All rights reserved.</p>
           </div>
     </footer>
 </html>
